Ensure success notification is visible on import resources
Move the notification above the primary button to ensure it's visible
when rendered rather than have it appear off the bottom of the screen
when the advanced configration settings are expanded or when viewed
in a short window.

--- a/src/containers/ImportResources/ImportResources.scss
+++ b/src/containers/ImportResources/ImportResources.scss
@@ -1,5 +1,5 @@
 /*
-Copyright 2019 The Tekton Authors
+Copyright 2019-2021 The Tekton Authors
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
@@ -31,7 +31,7 @@ limitations under the License.
   }
 
   .bx--toast-notification {
-    margin: 2rem 0;
+    margin: 2rem 0 1rem 0;
   }
 
   .bx--form-item,
